<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.WelcomePage">

    <item
        android:id="@+id/action_home"
        android:title="@string/toolbar_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/toolbar_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_jobdemand"
        android:title="@string/toolbar_jobdemand"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rate"
        android:title="@string/toolbar_rate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/toolbar_logout"
        app:showAsAction="never"/>
</menu>