<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Search.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Search Page"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/L1R4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="selectItem"
        android:text="@string/L1R4"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/L1R5" />

    <CheckBox
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:onClick="selectItem"
        android:text="@string/Location"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/L1R4" />

    <CheckBox
        android:id="@+id/L1R5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="selectItem"
        android:text="@string/L1R5"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <CheckBox
        android:id="@+id/Interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:onClick="selectItem"
        android:text="Interest"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location" />

    <CheckBox
        android:id="@+id/Institution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:onClick="selectItem"
        android:text="Instituion"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Interest" />

    <CheckBox
        android:id="@+id/Industry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:onClick="selectItem"
        android:text="Industry"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:buttonTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Institution" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:onClick="finalSelection"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIndustry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:text="@string/hello_world"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.847" />

    <EditText
        android:id="@+id/L1R5InputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittextstyle"
        app:layout_constraintStart_toEndOf="@+id/L1R5"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <EditText
        android:id="@+id/L1R4InputText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="56dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittextstyle"
        app:layout_constraintStart_toEndOf="@+id/L1R4"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <EditText
        android:id="@+id/institutionInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="102dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittextstyle"
        app:layout_constraintStart_toEndOf="@+id/Institution"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/industryInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="102dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittextstyle"
        app:layout_constraintStart_toEndOf="@+id/Industry"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/locationInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="102dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/edittextstyle"
        app:layout_constraintStart_toEndOf="@+id/Location"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinnerL1R5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/L1R5"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinnerL1R4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/L1R4"
        app:layout_constraintTop_toBottomOf="@+id/spinnerL1R5" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/Location"
        app:layout_constraintTop_toBottomOf="@+id/spinnerL1R4" />

    <Spinner
        android:id="@+id/spinnerInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/Interest"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLocation" />

    <Spinner
        android:id="@+id/spinnerInstitution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/Industry"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInterest" />

    <Spinner
        android:id="@+id/spinnerIndustry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/Interest"
        app:layout_constraintTop_toBottomOf="@+id/spinnerInstitution" />


</android.support.constraint.ConstraintLayout>